# task_manager_py

./: .gitignore  pyproject.toml
src/: main.py
src/common/enums/: task_priority.py  task_status.py
src/common/exceptions/: not_found_exception.py
src/core/: database.py  environment.py  log.py
src/modules/task/: task_controller.py  task_entity.py  task_repository.py  task_service.py
src/modules/task/dto/: create_task.py  update_task.py
src/modules/task/entities/: main.py
todo/: main.py
